--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -81,3 +81,4 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           generate_release_notes: true
+          files: dist/*
